# adaptive-cpu-chip-test-rl

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
configs/: reward_sweep.yaml
experiments/: __init__.py  run_reward_sweep.py  sweep_plots.py
notebooks/: 01_data_exploration.ipynb  02_baseline_models.ipynb  03_environment_validation.ipynb  04_rl_training.ipynb  05_results_analysis.ipynb
results/runs/full_stage_v1/: data_summary.json  data_summary.md  final_comparison.csv  summary.md
results/runs/safety_reward_v1/: summary.md
src/: __init__.py  config.py
src/agents/: __init__.py  dqn_agent.py  q_learning_agent.py  random_agent.py  rule_based_agent.py
src/baselines/: __init__.py  full_stage_supervised.py  logistic_baseline.py  xgboost_baseline.py
src/data/: __init__.py  feature_engineering.py  full_stage_loader.py  loader.py  make_dataset.py  prepare_full_stage_data.py  prepare_real_data.py  preprocessing.py  real_data_loader.py
src/environment/: __init__.py  actions.py  chip_testing_env.py  factory.py  multi_stage_env.py
src/evaluation/: __init__.py  comparison.py  evaluate.py  metrics.py
src/training/: __init__.py  train_dqn.py  train_qlearning.py
src/utils/: __init__.py  helpers.py  plotting.py
tests/: __init__.py  conftest.py  test_agents.py  test_config.py  test_data.py  test_environment.py  test_full_stage_data.py  test_metrics.py  test_real_data.py  test_reward_profiles.py  test_reward_sweep.py  test_supervised_extension.py
