[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-chip-test-rl"
version = "1.0.0"
description = "Adaptive CPU Chip Test Reduction Using Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
